# track_robot_simulation

./: README.md
base_kk_description/: CMakeLists.txt  package.xml
base_kk_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
base_kk_description/meshes/: base_link.stl  flipper_BL_1.stl  flipper_BR_1.stl  flipper_FL_1.stl  flipper_FR_1.stl
base_kk_description/urdf/: _d435.urdf.xacro  _d435i.urdf.xacro  base_kk.gazebo  base_kk.gv  base_kk.trans  base_kk.xacro  materials.xacro
example_gazebo_map/: CMakeLists.txt  README.md  package.xml
example_gazebo_map/launch/: gazebo.launch  map.launch  spawn_robot.launch
example_gazebo_map/models/example/: model.config  model.sdf
example_gazebo_map/models/example/meshes/: map.mtl
example_gazebo_map/worlds/: map.world
gazebo_continuous_track/sdf/: continuous_track_plugin.sdf
gazebo_continuous_track/urdf_xacro/: macros_common_gazebo.urdf.xacro  macros_track_gazebo.urdf.xacro
gazebo_continuous_track_example/: CMakeLists.txt
gazebo_continuous_track_example/launch/: display.launch  example_track_flipper_world.launch  example_track_world.launch  urdf.rviz
gazebo_continuous_track_example/urdf_xacro/: example_track.urdf.xacro  example_track_flipper.urdf.xacro  example_track_flipper_gazebo.urdf.xacro  example_track_gazebo.urdf.xacro
gazebo_continuous_track_example/world/: example_track_flipper.world
kubo_joy/: CMakeLists.txt  package.xml
kubo_joy/include/kubo_joy/: kubo_joy.h
kubo_joy/launch/: kubo_joy.launch
kubo_joy/src/: kubo_joy.cpp
ps4-ros/launch/: ps4.launch
ps4-ros/src/: ps4_ros.cpp
realsense-ros-gazebo/realsense-ros/realsense2_description/urdf/: _d435i.urdf.xacro
