<?xml version="1.0"?>
<package format="2">
  <name>example_gazebo_map</name>
  <version>0.0.0</version>
  <description>Example gazebo map bringup</description>

  <author email="hjpark@kalman.kr">Hyojong Park</author>

  <maintainer email="hjpark@kalman.kr">Hyojong Park</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
